fix horsey overlap

--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -12,6 +12,10 @@
   align-items: center;
   position: relative;
   padding: 0.5rem 0.5rem;
+
+  .brand-group {
+    z-index: 2;
+  }
 }
 
 .hamburger {
@@ -40,7 +44,6 @@
   align-items: center;
   font-family: "Permanent Marker";
   transform: translateX(-4%);
-  z-index: 2;
   cursor: pointer;
 
   svg {
